--- a/glxDisplay/CMakeLists.txt
+++ b/glxDisplay/CMakeLists.txt
@@ -7,39 +7,21 @@ message("Nome Progetto : ${PROJECT_NAME}")
 #metto il flag per il c++ 11
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+#aggiungo cartellaper lib esterne
+add_subdirectory (external)
 
-###########################################
-#creazione della libraria dinamica
-###########################################
-add_library(${PROJECT_NAME} SHARED 
-	src/glxDisplay.cpp
-)
-
-target_include_directories(${PROJECT_NAME}
-	PUBLIC
-		${PROJECT_SOURCE_DIR/include}	
-)
-
-###########################################
-#creazione dell'eseguibile
-###########################################
-set(SOURCES 
-	src/main.cpp
-)
-
-include_directories(${PROJECT_SOURCE_DIR/include})
 include_directories(/usr/include/glib-2.0 /usr/include/libxml2 /usr/lib/aarch64-linux-gnu/glib-2.0/include/)
+include_directories(external/glfw-3.2.1/include/)
 
-set(HEADERS
-        include/glxDisplay.h
-)
+add_executable(${PROJECT_NAME} 
+	App/main.cpp
+	App/glxDisplay.cpp
+	App/glxDisplay.h)
 
-add_executable(glxDisplayBin ${SOURCES} ${HEADERS})
-
-#all'eseguibile link la lib
-target_include_directories(glxDisplayBin 
-	PRIVATE
-		${PROJECT_NAME} 
+target_link_libraries(${PROJECT_NAME}
+        PRIVATE
 		GL
 		GLEW
+                glfw
 )
+
