modificato cmakelists per compilare la lib aggiunta

--- a/glxDisplay/CMakeLists.txt
+++ b/glxDisplay/CMakeLists.txt
@@ -11,12 +11,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_subdirectory (external)
 
 include_directories(/usr/include/glib-2.0 /usr/include/libxml2 /usr/lib/aarch64-linux-gnu/glib-2.0/include/)
-include_directories(external/glfw-3.2.1/include/)
+include_directories(external/glfw-3.2.1/include/ external/glm-0.9.8/ data/shader/)
 
 add_executable(${PROJECT_NAME} 
 	App/main.cpp
 	App/glxDisplay.cpp
-	App/glxDisplay.h)
+	App/glxDisplay.h
+	App/loadImage.h
+	App/loadImage.cpp
+	App/data/shader/*)
 
 target_link_libraries(${PROJECT_NAME}
         PRIVATE
