--- a/glxDisplay/CMakeLists.txt
+++ b/glxDisplay/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_subdirectory (external)
 
 include_directories(/usr/include/glib-2.0 /usr/include/libxml2 /usr/lib/aarch64-linux-gnu/glib-2.0/include/)
-include_directories(external/glfw-3.2.1/include/ external/glm-0.9.8/ data/shader/)
+include_directories(external/glfw-3.2.1/include/ external/glm-0.9.8/ data/shader/ common/)
 
 add_executable(${PROJECT_NAME} 
 	App/main.cpp
@@ -21,6 +21,8 @@ add_executable(${PROJECT_NAME}
 	App/loadImage.cpp
 	data/shader/text2d.vertexshader
 	data/shader/text2d.fragmentshader
+        common/shader.h
+        common/shader.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
