aggiungo un quadrato per capire

--- a/glxDisplay/CMakeLists.txt
+++ b/glxDisplay/CMakeLists.txt
@@ -17,6 +17,8 @@ add_executable(${PROJECT_NAME}
 	App/main.cpp
 	App/glxDisplay.cpp
 	App/glxDisplay.h
+        App/Quad.h
+        App/Quad.h
         data/shader/text2d.vertexshader
 	data/shader/text2d.fragmentshader
         common/loadImageOnTexture.h
